@@ -1,2 +1,3 @@
-.build
-Dist-Zilla-Plugin-Bootstrap-ShareDir-Module-*
+/.build
+/Dist-Zilla-Plugin-Bootstrap-ShareDir-Module-*
+/tmp/
