@@ -1,6 +1,27 @@
 This file contains changes to DEVELOPMENT dependencies only ( both REQUIRED and OPTIONAL )
 
 1.001002
+ [Added / develop requires]
+ - Dist::Zilla::Plugin::Author::KENTNL::CONTRIBUTING 0.001003
+ - Dist::Zilla::Plugin::MetaYAML::Minimal
+ - Dist::Zilla::Plugin::RemovePrereqs::Provided
+ - English
+ - Software::License::Perl_5
+ - Test::MinimumVersion
+
+ [Changed / develop requires]
+ - Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes 0.001001 → 0.004002
+ - Dist::Zilla::Plugin::Author::KENTNL::TravisCI 0 → 0.001002
+ - Dist::Zilla::Plugin::Test::Compile::PerFile 0 → 0.003902
+ - Test::More 0 → 0.96
+
+ [Changed / develop suggests]
+ - Dist::Zilla::App::Command::bakeini 0.002000 → 0.002006
+ - Dist::Zilla::PluginBundle::Author::KENTNL 2.023002 → 2.025021
+
+ [Removed / develop requires]
+ - Dist::Zilla::Plugin::Bootstrap::ShareDir::Module
+ - Dist::Zilla::Plugin::MetaYAML
 
 1.001001 2015-01-21T16:26:20Z
  [Added / develop recommends]
@@ -140,4 +161,3 @@ This file contains changes to DEVELOPMENT dependencies only ( both REQUIRED and 
 0.1.2 2013-09-24T23:49:46Z
 
 0.1.1 2013-09-08T11:23:50Z
-
