@@ -32,4 +32,3 @@ This file contains changes in OPTIONAL dependencies for standard CPAN phases (co
 0.1.2 2013-09-24T23:49:46Z
 
 0.1.1 2013-09-08T11:23:50Z
-
