@@ -1,6 +1,14 @@
 Release history for Dist-Zilla-Plugin-Bootstrap-ShareDir-Module
 
 {{$NEXT}}
+ [Bugfix]
+ - Avoid testing issues under -Ddefault_inc_excludes_dot
+ - Closes https://github.com/kentnl/Dist-Zilla-Plugin-Bootstrap-ShareDir-Module/issues/1
+
+ [Dependencies::Stats]
+ - Dependencies changed since 1.001001, see misc/*.deps* for details
+ - develop: +6 ↑4 -2 (suggests: ↑2)
+ - test: ↓1
 
 1.001001 2015-01-21T16:26:20Z af98f22
  [Dependencies::Stats]
@@ -111,4 +119,3 @@ Release history for Dist-Zilla-Plugin-Bootstrap-ShareDir-Module
 
 0.1.0 2013-09-04T22:01:12Z
  - First version.
-
